--- a/css/layout.css
+++ b/css/layout.css
@@ -400,7 +400,7 @@ position:relative;
 hr{
 background:#ddd;
 border:1px solid #ddd;
-margin:24px 0 7px;
+margin:24px 0;
 }
 .endOfPage{
 padding:0 8px;
