--- a/css/layout.css
+++ b/css/layout.css
@@ -5,6 +5,7 @@ font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", sans-serif;
 color:#aaa7ea;
 }
 #buynow{
+display:none;
 position:absolute;
 bottom:0;
 right:30px;
