--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,15 @@
 body, button, input, select, textarea{
 margin:0;
-background:#fff;
+background:0;
 font-family: "Helvetica Neue", Helvetica, Arial, "微軟正黑體", sans-serif;
 color:#aaa7ea;
+}
+#settingSlidedown button{
+display:inline;
+padding:0;
+margin:0;
+border:0;
+color:inherit;
 }
 #buynow{
 position:absolute;
@@ -32,6 +39,7 @@ width:100%;
 color:#aaa;
 /* z-index:10; */
 top:0;
+left:0;
 }
 #paddingSpace{
 display:block;
@@ -44,19 +52,19 @@ padding:8px 8px 1px;
 #topBar .column,#topBar .icon{
 /* margin-top:8px; */
 }
-#topBar .column{
+/* #topBar .column{
 display:inline-block;
 height:20px;
 line-height:20px;
 font-size:16px;
 padding:2px;
 vertical-align:top;
-}
+} */
 #panel .column{
 width:300px;
 padding:0;
 }
-#topBar .button{
+.button{
 display:inline-block;
 background:transparent;
 /* box-shadow:0 0 3px rgba(0,0,0,0.3); */
@@ -67,7 +75,7 @@ color:#aaa;
 font-size:14px;
 line-height:30px;
 }
-#topBar .button:hover,#topBar .button:active{
+ .button:hover, .button:active{
 background:#666;
 color:#ddd;
 }
@@ -104,6 +112,17 @@ background-position: 0px -110px;
 /* max-width:100%; */
 }
 #topBar .left{
+}
+#user .description{
+width:290px;
+margin:0;
+padding:0 10px;
+}
+#userFb{
+display:inline-block;
+border:solid 1px #ddd;
+padding:4px;
+height:172px;
 }
 .left{
 display:inline-block;
@@ -233,9 +252,16 @@ text-align:right;
 float:right;
 }
 .frame .userInfo{
-display:none
+display:none;
+padding:0;
+margin:0;
+border:0;
+color:inherit;
 }
-.object .userInfo, .category .userInfo{
+.object .userInfo
+, .category .userInfo
+, .user .userInfo
+{
 display:inline-block;
 }
 .frame .footer .info{
@@ -262,7 +288,7 @@ font-size:16px;
 font-weight:bold;
 margin:2px 0;
 }
-.category .frame{
+.category .frame,.user .frame{
 width:300px;
 }
 .action{
@@ -399,6 +425,9 @@ padding-right:30px;
 }
 .relative{
 position:relative;
+}
+br,hr{
+clear:both;
 }
 hr{
 background:#ddd;
