--- a/css/layout.css
+++ b/css/layout.css
@@ -288,7 +288,7 @@ font-size:16px;
 font-weight:bold;
 margin:2px 0;
 }
-.category .frame,.user .frame{
+.category .frame{
 width:300px;
 }
 .action{
