--- a/css/layout.css
+++ b/css/layout.css
@@ -118,11 +118,25 @@ width:290px;
 margin:0;
 padding:0 10px;
 }
+#user .username{
+font-size:inherit;
+margin:0;
+}
 #userFb{
 display:inline-block;
-border:solid 1px #ddd;
-padding:4px;
-height:172px;
+border:0;
+padding:0;
+height:180px;
+position:relative;
+}
+#userFb:after{
+/* background:#fff; */
+content:" ";
+display:block;
+position:absolute;
+bottom:0;
+width:97%;
+height:16px;
 }
 .left{
 display:inline-block;
@@ -244,7 +258,7 @@ border-bottom:1px solid #fff;
 border-radius:7px;
 background:#fff;
 width:400px;
-margin:10px 0;
+margin:4px 0;
 color:#555;
 }
 .frame .description{
@@ -363,7 +377,7 @@ max-height:100%;
 .photo .loading{
 display:block;
 line-height:355px;
-border:1px solid #000;
+/* border:1px solid #000; */
 }
 .frame .footer>*{
 padding:0;
@@ -432,7 +446,7 @@ clear:both;
 hr{
 background:#ddd;
 border:1px solid #ddd;
-margin:24px 0 7px;
+margin:24px 0 0;
 }
 .endOfPage{
 padding:0 8px;
@@ -470,4 +484,25 @@ bottom:100px;
 display:block;
 line-height:auto;
 border:0;
+}
+.editForm{
+margin:10px 0;
+}
+.editForm  label{
+display:inline-block;
+width:160px;
+}
+.editForm  label+*{
+width:630px;
+}
+.tabWrapper{
+border-bottom:solid 1px #ddd ;
+}
+.tabWrapper .button{
+position:relative;
+bottom:-1px;
+background:#fff;
+}
+.tabWrapper .selected{
+border-bottom:solid 1px #fff;
 }
