--- a/css/layout.css
+++ b/css/layout.css
@@ -42,12 +42,17 @@ color:#aaa;
 top:0;
 left:0;
 }
+#categoryDropdown ul{
+list-style:none;
+padding-left:10px;
+margin-right:40px;
+}
 #paddingSpace{
 display:block;
 height:60px;
 width:100%;
 }
-#topBar .container{
+#topBar{
 padding:8px 8px 1px;
 }
 #topBar .column,#topBar .icon{
@@ -153,9 +158,10 @@ float:right;
 margin:0;
 padding:0;
 display:block;
-height:100%;
+height:0;
 width:100%;
-position:relative;
+top:0;
+position:absolute;
 }
 #siteTitle{
 width:140px;
@@ -488,13 +494,6 @@ border:0;
 }
 .editForm{
 margin:10px 0;
-}
-.editForm  label{
-display:inline-block;
-width:160px;
-}
-.editForm  label+*{
-width:630px;
 }
 .tabWrapper{
 border-bottom:solid 1px #ddd ;
