--- a/css/layout.css
+++ b/css/layout.css
@@ -397,7 +397,7 @@ display:inline-block;
 .frame  .actions{
 display:block;
 padding:0;
-margin:0;
+margin:4px 0;
 vertical-align:top;
 }
 .relative{
